Closed Bug 117819 Opened 23 years ago Closed 23 years ago

[FIX]Getting printers sometimes asserts on bad index

Categories

(Core :: Printing: Output, defect)

x86
Windows 98
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla0.9.8

People

(Reporter: rods, Assigned: rods)

Details

Attachments

(1 file)

 
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.8
This just adds all the items and remember the def item. Then swaps it and the
zero'th item.
Summary: Getting printers sometimes asserts on bad index → [FIX]Getting printers sometimes asserts on bad index
r=dcone
Comment on attachment 63305 [details] [diff] [review]
Patch - better algorithm

sr=attinasi
Attachment #63305 - Flags: superreview+
fixed
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: