Better algorithm for getting and setting the dfault printer Bug 117819 r-dcone sr=attinasi